ddl-parser/src/main/java/parser/ddl/ddlParser.java
// Generated from parser/ddl/ddl.g4 by ANTLR 4.5
package parser.ddl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ddlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, TABLE=2, PRIMARY=3, KEY=4, NOT=5, NULL_T=6, TRUE=7, FALSE=8, 
		INT=9, INTEGER=10, SMALLINT=11, BIGINT=12, TINYINT=13, FLOAT=14, DOUBLE=15, 
		DECIMAL=16, NUMERIC=17, CHAR=18, VARCHAR=19, TEXT=20, DATE=21, TIME=22, 
		DATETIME=23, TIMESTAMP=24, BOOLEAN=25, BOOL=26, BLOB=27, DOT=28, COMMA=29, 
		LPAREN=30, RPAREN=31, SEMICOLON=32, IDENT=33, QUOTED_IDENT=34, NUMBER=35, 
		STRING=36, WS=37, LINE_COMMENT=38;
	public static final int
		RULE_ddlStatement = 0, RULE_createTableStmt = 1, RULE_tableElementList = 2, 
		RULE_columnDef = 3, RULE_columnConstraint = 4, RULE_dataType = 5, RULE_precision = 6, 
		RULE_scale = 7, RULE_length = 8, RULE_tableName = 9, RULE_columnName = 10, 
		RULE_identifier = 11, RULE_literal = 12;
	public static final String[] ruleNames = {
		"ddlStatement", "createTableStmt", "tableElementList", "columnDef", "columnConstraint", 
		"dataType", "precision", "scale", "length", "tableName", "columnName", 
		"identifier", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'.'", "','", "'('", "')'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CREATE", "TABLE", "PRIMARY", "KEY", "NOT", "NULL_T", "TRUE", "FALSE", 
		"INT", "INTEGER", "SMALLINT", "BIGINT", "TINYINT", "FLOAT", "DOUBLE", 
		"DECIMAL", "NUMERIC", "CHAR", "VARCHAR", "TEXT", "DATE", "TIME", "DATETIME", 
		"TIMESTAMP", "BOOLEAN", "BOOL", "BLOB", "DOT", "COMMA", "LPAREN", "RPAREN", 
		"SEMICOLON", "IDENT", "QUOTED_IDENT", "NUMBER", "STRING", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ddl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ddlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DdlStatementContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ddlParser.EOF, 0); }
		public List<CreateTableStmtContext> createTableStmt() {
			return getRuleContexts(CreateTableStmtContext.class);
		}
		public CreateTableStmtContext createTableStmt(int i) {
			return getRuleContext(CreateTableStmtContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ddlParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ddlParser.SEMICOLON, i);
		}
		public DdlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterDdlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitDdlStatement(this);
		}
	}

	public final DdlStatementContext ddlStatement() throws RecognitionException {
		DdlStatementContext _localctx = new DdlStatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ddlStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26);
				createTableStmt();
				setState(28);
				_la = _input.LA(1);
				if (_la==SEMICOLON) {
					{
					setState(27);
					match(SEMICOLON);
					}
				}

				}
				}
				setState(32); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CREATE );
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableStmtContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(ddlParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(ddlParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ddlParser.LPAREN, 0); }
		public TableElementListContext tableElementList() {
			return getRuleContext(TableElementListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ddlParser.RPAREN, 0); }
		public CreateTableStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterCreateTableStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitCreateTableStmt(this);
		}
	}

	public final CreateTableStmtContext createTableStmt() throws RecognitionException {
		CreateTableStmtContext _localctx = new CreateTableStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_createTableStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(CREATE);
			setState(37);
			match(TABLE);
			setState(38);
			tableName();
			setState(39);
			match(LPAREN);
			setState(40);
			tableElementList();
			setState(41);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableElementListContext extends ParserRuleContext {
		public List<ColumnDefContext> columnDef() {
			return getRuleContexts(ColumnDefContext.class);
		}
		public ColumnDefContext columnDef(int i) {
			return getRuleContext(ColumnDefContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ddlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ddlParser.COMMA, i);
		}
		public TableElementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableElementList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterTableElementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitTableElementList(this);
		}
	}

	public final TableElementListContext tableElementList() throws RecognitionException {
		TableElementListContext _localctx = new TableElementListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tableElementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			columnDef();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(44);
				match(COMMA);
				setState(45);
				columnDef();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnDefContext extends ParserRuleContext {
		public ColumnNameContext columnName() {
			return getRuleContext(ColumnNameContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public List<ColumnConstraintContext> columnConstraint() {
			return getRuleContexts(ColumnConstraintContext.class);
		}
		public ColumnConstraintContext columnConstraint(int i) {
			return getRuleContext(ColumnConstraintContext.class,i);
		}
		public ColumnDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterColumnDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitColumnDef(this);
		}
	}

	public final ColumnDefContext columnDef() throws RecognitionException {
		ColumnDefContext _localctx = new ColumnDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_columnDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			columnName();
			setState(52);
			dataType();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PRIMARY || _la==NOT) {
				{
				{
				setState(53);
				columnConstraint();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnConstraintContext extends ParserRuleContext {
		public TerminalNode PRIMARY() { return getToken(ddlParser.PRIMARY, 0); }
		public TerminalNode KEY() { return getToken(ddlParser.KEY, 0); }
		public TerminalNode NOT() { return getToken(ddlParser.NOT, 0); }
		public TerminalNode NULL_T() { return getToken(ddlParser.NULL_T, 0); }
		public ColumnConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnConstraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterColumnConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitColumnConstraint(this);
		}
	}

	public final ColumnConstraintContext columnConstraint() throws RecognitionException {
		ColumnConstraintContext _localctx = new ColumnConstraintContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_columnConstraint);
		try {
			setState(63);
			switch (_input.LA(1)) {
			case PRIMARY:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				match(PRIMARY);
				setState(60);
				match(KEY);
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				match(NOT);
				setState(62);
				match(NULL_T);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
	 
		public DataTypeContext() { }
		public void copyFrom(DataTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DoubleTypeContext extends DataTypeContext {
		public TerminalNode DOUBLE() { return getToken(ddlParser.DOUBLE, 0); }
		public DoubleTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterDoubleType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitDoubleType(this);
		}
	}
	public static class CharTypeContext extends DataTypeContext {
		public TerminalNode CHAR() { return getToken(ddlParser.CHAR, 0); }
		public TerminalNode LPAREN() { return getToken(ddlParser.LPAREN, 0); }
		public LengthContext length() {
			return getRuleContext(LengthContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ddlParser.RPAREN, 0); }
		public CharTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterCharType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitCharType(this);
		}
	}
	public static class DecimalTypeContext extends DataTypeContext {
		public TerminalNode DECIMAL() { return getToken(ddlParser.DECIMAL, 0); }
		public TerminalNode LPAREN() { return getToken(ddlParser.LPAREN, 0); }
		public PrecisionContext precision() {
			return getRuleContext(PrecisionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ddlParser.RPAREN, 0); }
		public TerminalNode COMMA() { return getToken(ddlParser.COMMA, 0); }
		public ScaleContext scale() {
			return getRuleContext(ScaleContext.class,0);
		}
		public DecimalTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterDecimalType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitDecimalType(this);
		}
	}
	public static class BooleanTypeContext extends DataTypeContext {
		public TerminalNode BOOLEAN() { return getToken(ddlParser.BOOLEAN, 0); }
		public BooleanTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterBooleanType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitBooleanType(this);
		}
	}
	public static class IntegerTypeContext extends DataTypeContext {
		public TerminalNode INTEGER() { return getToken(ddlParser.INTEGER, 0); }
		public IntegerTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterIntegerType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitIntegerType(this);
		}
	}
	public static class IntTypeContext extends DataTypeContext {
		public TerminalNode INT() { return getToken(ddlParser.INT, 0); }
		public IntTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterIntType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitIntType(this);
		}
	}
	public static class TimeTypeContext extends DataTypeContext {
		public TerminalNode TIME() { return getToken(ddlParser.TIME, 0); }
		public TimeTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterTimeType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitTimeType(this);
		}
	}
	public static class TextTypeContext extends DataTypeContext {
		public TerminalNode TEXT() { return getToken(ddlParser.TEXT, 0); }
		public TextTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterTextType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitTextType(this);
		}
	}
	public static class TinyintTypeContext extends DataTypeContext {
		public TerminalNode TINYINT() { return getToken(ddlParser.TINYINT, 0); }
		public TinyintTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterTinyintType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitTinyintType(this);
		}
	}
	public static class BoolTypeContext extends DataTypeContext {
		public TerminalNode BOOL() { return getToken(ddlParser.BOOL, 0); }
		public BoolTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterBoolType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitBoolType(this);
		}
	}
	public static class SmallintTypeContext extends DataTypeContext {
		public TerminalNode SMALLINT() { return getToken(ddlParser.SMALLINT, 0); }
		public SmallintTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterSmallintType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitSmallintType(this);
		}
	}
	public static class FloatTypeContext extends DataTypeContext {
		public TerminalNode FLOAT() { return getToken(ddlParser.FLOAT, 0); }
		public FloatTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterFloatType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitFloatType(this);
		}
	}
	public static class DateTypeContext extends DataTypeContext {
		public TerminalNode DATE() { return getToken(ddlParser.DATE, 0); }
		public DateTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterDateType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitDateType(this);
		}
	}
	public static class DatetimeTypeContext extends DataTypeContext {
		public TerminalNode DATETIME() { return getToken(ddlParser.DATETIME, 0); }
		public DatetimeTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterDatetimeType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitDatetimeType(this);
		}
	}
	public static class NumericTypeContext extends DataTypeContext {
		public TerminalNode NUMERIC() { return getToken(ddlParser.NUMERIC, 0); }
		public TerminalNode LPAREN() { return getToken(ddlParser.LPAREN, 0); }
		public PrecisionContext precision() {
			return getRuleContext(PrecisionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ddlParser.RPAREN, 0); }
		public TerminalNode COMMA() { return getToken(ddlParser.COMMA, 0); }
		public ScaleContext scale() {
			return getRuleContext(ScaleContext.class,0);
		}
		public NumericTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterNumericType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitNumericType(this);
		}
	}
	public static class TimestampTypeContext extends DataTypeContext {
		public TerminalNode TIMESTAMP() { return getToken(ddlParser.TIMESTAMP, 0); }
		public TimestampTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterTimestampType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitTimestampType(this);
		}
	}
	public static class BigintTypeContext extends DataTypeContext {
		public TerminalNode BIGINT() { return getToken(ddlParser.BIGINT, 0); }
		public BigintTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterBigintType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitBigintType(this);
		}
	}
	public static class BlobTypeContext extends DataTypeContext {
		public TerminalNode BLOB() { return getToken(ddlParser.BLOB, 0); }
		public BlobTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterBlobType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitBlobType(this);
		}
	}
	public static class VarcharTypeContext extends DataTypeContext {
		public TerminalNode VARCHAR() { return getToken(ddlParser.VARCHAR, 0); }
		public TerminalNode LPAREN() { return getToken(ddlParser.LPAREN, 0); }
		public LengthContext length() {
			return getRuleContext(LengthContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ddlParser.RPAREN, 0); }
		public VarcharTypeContext(DataTypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).enterVarcharType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ddlListener ) ((ddlListener)listener).exitVarcharType(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dataType);
		int _la;
		try {
			setState(116);
			switch (_input.LA(1)) {
			case INT:
				_localctx = new IntTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				match(INT);
				}
				break;
			case INTEGER:
				_localctx = new IntegerTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(INTEGER);
				}
				break;
			case SMALLINT:
				_localctx = new SmallintTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				match(SMALLINT);
				}
				break;
			case BIGINT:
				_localctx = new BigintTypeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				match(BIGINT);
				}
				break;
			case TINYINT:
				_localctx = new TinyintTypeContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				match(TINYINT);
				}
				break;
			case FLOAT:
				_localctx = new FloatTypeContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(70);
				match(FLOAT);
				}
				break;
			case DOUBLE:
				_localctx = new DoubleTypeContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(71);
				match(DOUBLE);
				}
				break;
			case DECIMAL:
				_localctx = new DecimalTypeContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(72);
				match(DECIMAL);
				setState(81);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(73);
					match(LPAREN);
					setState(74);
					precision();
					setState(77);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(75);
						match(COMMA);
						setState(76);
						scale();
						}
					}

					setState(79);
					match(RPAREN);
					}
				}

				}
				break;
			case NUMERIC:
				_localctx = new NumericTypeContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(83);
				match(NUMERIC);
				setState(92);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(84);
					match(LPAREN);
					setState(85);
					precision();
					setState(88);
					_la = _input.LA(1);
					if (_la==COMMA) {
						{
						setState(86);
						match(COMMA);
						setState(87);
						scale();
						}
					}

					setState(90);
					match(RPAREN);
					}
				}

				}
				break;
			case CHAR:
				_localctx = new CharTypeContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(94);
				match(CHAR);
				setState(99);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(95);
					match(LPAREN);
					setState(96);
					length();
					setState(97);
					match(RPAREN);
					}
				}

				}
				break;
			case VARCHAR:
				_localctx = new VarcharTypeContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(101);
				match(VARCHAR);
				setState(106);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(102);
					match(LPAREN);
					setState(103);
					length();
					setState(104);
					match(RPAREN);
					}
				}
